<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">myruns2</string>
    <string name="todo">todo</string>
    <string name="changePicture">change Picture</string>
    <string name="name">Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="major">Major</string>
    <string name="Class">Class</string>
    <string name="Female">Female</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="input_type">Input Type</string>
    <string name="activity_type">Activity Type</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="history">History</string>

    <string name="signature_title">signature_title</string>
    <string name="reply_title">reply_title</string>

    <string name="sync_title">sync_title</string>
    <string name="attachment_summary_off">attachment_summary_off</string>
    <string name="attachment_summary_on">attachment_summary_on</string>
    <string name="attachment_title">attachment_title</string>
    <string name="title_activity_settings">Activity Settings</string>
    <string name="sign_out">Sign Out</string>


    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Unit Preferences -->
    <string name="unit_title">Unit Preference</string>
    <string name="unit_descriptor">Select preferred unit of measurement</string>

    <!-- Privacy Preferences -->
    <string name="privacy_title">Privacy Setting</string>
    <string name="privacy_on">Posting your records anonymously</string>
    <string name="privacy_off">Posting your records as you</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>